# cpp-lifetime

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  multi-platform-build.yml
examples/: example_1.cpp
include/hsqr/: lifetime.h
test/: lifetime-test.cpp
